fix table wrap

--- a/static/css/rmarkdown.css
+++ b/static/css/rmarkdown.css
@@ -73,6 +73,10 @@
   min-height: 30px;
 }
 
+.govuk_dt_table {
+  overflow-x: scroll;
+}
+
 .govuk_dt_nav {
   display: flex;
   justify-content: space-between;
